Jre17 but *smol* (#8)
- a lot of commits idk xdxd

Co-authored-by: ArtDev <45949002+artdeell@users.noreply.github.com>